# practical-programming-in-chemistry-exercises

./: .gitignore  LICENSE  README.md
Lecture01/: README.md
Lecture02/: README.md
Lecture03/: 03_exercise.ipynb  03_solution.ipynb  README.md
Lecture04/: 04_exercise.ipynb  04_solution.ipynb  04_warm_up.ipynb  README.md  molecule_info.txt  reaction_yields.txt  reaction_yields_with_errors.txt
Lecture04/part_1/: 04_01_exercise.ipynb  04_01_solution.ipynb  README.md  molecule_info.txt  reaction_yields.txt  reaction_yields_with_errors.txt
Lecture04/part_2/: 05_exercises.ipynb  05_solution.ipynb  README.md  molecular_data.txt
Lecture05/: 05_exercise.ipynb  05_exercises.ipynb  05_solution.ipynb  README.md
Lecture06/: 06_exercise.ipynb  06_exercises.ipynb  06_solution.ipynb  06_solutions.ipynb  README.md
Lecture07/: 07_exercise.ipynb  07_exercises.ipynb  07_solutions.ipynb  README.md
Lecture08/: README.md  app.py  exercises.ipynb  solutions_app.py
Lecture08/Part1/: 08_drfp_partA.ipynb  08_drfp_partB.ipynb
Lecture08/Part2/: README.md  (+1 more)
Lecture09/: README.md
Lecture09/Part2/amremover/: pyproject.toml
Lecture09/Part2/amremover/src/amremover/: utils.py
Lecture09/Part2/solution_advanced/amremover/: pyproject.toml
Lecture09/Part2/solution_advanced/amremover/src/amremover/: cli.py
Lecture09/Part2/solution_standard/amremover/: pyproject.toml
Lecture09/Part2/solution_standard/amremover/src/amremover/: utils.py
Lecture10/: 10_exercise.ipynb  10_solution.ipynb  10_solutions.ipynb  README.md
assets/: vscode_install_ipython.png.html  vscode_python_env.png.html  vscode_select_env.png.html  vscode_select_kernel.png.html
week_01/: 01_exercise.ipynb  01_solution.ipynb
week_02/: 02_exercise.ipynb  02_solution.ipynb
week_03/: 03_exercise.ipynb  03_solution.ipynb  molecule_info.txt
week_04/: 04_exercises.ipynb  04_solution.ipynb  molecular_data.txt
week_05/: 05_exercises.ipynb  05_solutions.ipynb  README.md  aspirin.mol
week_06/: 06_exercises.ipynb  06_solutions.ipynb
week_07/exercise_02/amremover_package/: pyproject.toml
week_07/exercise_02/amremover_package/src/amremover_package/: amremover_module.py
week_08/: 08_exercise.ipynb  08_solution.ipynb
(+9 files in other folders)
