# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# Here you find a lot more information of what metadata you could
# specify in the pyproject.toml
[build-system] # let's go with the default build system (instead of setuptools)
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amremover_package"
version = "0.0.1"
dependencies = ["rdkit", ]
# define name = ..., version = 0.0.1 (or whatever you want), dependencies = [...] (rdkit is the only one, in this package)
